experimental/parser/testdata/lexer/strings/bad-contents.proto.stderr.txt
error: unescaped newlines are not permitted in string literals
  --> testdata/lexer/strings/bad-contents.proto:1:13
   | 
 1 |   "this string
   |  ____________^
 2 | / contains a newline"
   | \^
  help: replace this with an explicit `\n`
   | 
 1 | - "this string
 2 | - contains a newline"
 1 | + "this string\n"
 2 | + "contains a newline"
   | 

error: unescaped newlines are not permitted in string literals
  --> testdata/lexer/strings/bad-contents.proto:3:2
   | 
 3 |   "
   |  _^
 4 | / "
   | \^
  help: replace this with an explicit `\n`
   | 
 3 | - "
 4 | - "
 3 | + "\n"
 4 | + ""
   | 

error: unescaped NUL bytes are not permitted in string literals
  --> testdata/lexer/strings/bad-contents.proto:6:30
   | 
 6 | "this string contains a nul: <U+0000>"
   |                              ^^^^^^^^ 
  help: replace it with `\0` or `\x00`
   | 
 6 | - "this string contains a nul: <U+0000>"
 6 | + "this string contains a nul: \0"
   | 

error: unescaped NUL bytes are not permitted in string literals
  --> testdata/lexer/strings/bad-contents.proto:7:29
   | 
 7 | "this string contains a nul <U+0000> in the middle"
   |                             ^^^^^^^^ 
  help: replace it with `\0` or `\x00`
   | 
 7 | - "this string contains a nul <U+0000> in the middle"
 7 | + "this string contains a nul \0 in the middle"
   | 

error: unescaped NUL bytes are not permitted in string literals
  --> testdata/lexer/strings/bad-contents.proto:8:2
   | 
 8 | "<U+0000>"
   |  ^^^^^^^^ 
  help: replace it with `\0` or `\x00`
   | 
 8 | - "<U+0000>"
 8 | + "\0"
   | 

warning: non-printable character in string literal
  --> testdata/lexer/strings/bad-contents.proto:10:57
   | 
10 | "this string contains some other non-graphic character: <U+0001>"
   |                                                         ^^^^^^^^ 
  help: consider escaping it
   | 
10 | - "this string contains some other non-graphic character: <U+0001>"
10 | + "this string contains some other non-graphic character: \x01"
   | 

warning: non-printable character in string literal
  --> testdata/lexer/strings/bad-contents.proto:11:39
   | 
11 | "this is graphic but non-ASCII space: <U+00A0>"
   |                                       ^^^^^^^^ 
  help: consider escaping it
   | 
11 | - "this is graphic but non-ASCII space: <U+00A0>"
11 | + "this is graphic but non-ASCII space: \u00a0"
   | 

encountered 5 errors and 2 warnings
